// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Highlighted Code > can hide the line numbers 1`] = `
<code
  class="hljs _wrapLines_15d654"
  data-testid="code-highlighter"
>
  <span
    class="_linenumber_15d654"
  >
    1
  </span>
  <div
    class="_codeline_15d654"
  >
    <span>
      const a = 1
    </span>
  </div>
</code>
`;

exports[`Highlighted Code > highlights code 1`] = `
<code
  class="hljs _showGutter_15d654"
  data-testid="code-highlighter"
>
  <span
    class="_linenumber_15d654"
  >
    1
  </span>
  <div
    class="_codeline_15d654"
  >
    <span
      class="hljs-keyword"
    >
      const
    </span>
     a = 
    <span
      class="hljs-number"
    >
      1
    </span>
  </div>
</code>
`;

exports[`Highlighted Code > renders plain text 1`] = `
<code
  class="hljs _showGutter_15d654"
  data-testid="code-highlighter"
>
  <span
    class="_linenumber_15d654"
  >
    1
  </span>
  <div
    class="_codeline_15d654"
  >
    <span>
      a
    </span>
  </div>
  <span
    class="_linenumber_15d654"
  >
    2
  </span>
  <div
    class="_codeline_15d654"
  >
    <span>
      b
    </span>
  </div>
  <span
    class="_linenumber_15d654"
  >
    3
  </span>
  <div
    class="_codeline_15d654"
  >
    <span>
      c
    </span>
  </div>
</code>
`;

exports[`Highlighted Code > starts with a specific line 1`] = `
<code
  class="hljs _showGutter_15d654 _wrapLines_15d654"
  data-testid="code-highlighter"
>
  <span
    class="_linenumber_15d654"
  >
    100
  </span>
  <div
    class="_codeline_15d654"
  >
    <span>
      const a = 1
    </span>
  </div>
</code>
`;

exports[`Highlighted Code > wraps code 1`] = `
<code
  class="hljs _showGutter_15d654 _wrapLines_15d654"
  data-testid="code-highlighter"
>
  <span
    class="_linenumber_15d654"
  >
    1
  </span>
  <div
    class="_codeline_15d654"
  >
    <span>
      const a = 1
    </span>
  </div>
</code>
`;
